--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,23 @@
 {
     "$schema": "https://getcomposer.org/schema.json",
-    "name": "laravel/laravel",
+    "name": "aasawari.sahasrabuddhe/laravel-mongodb-starter-kit",
     "type": "project",
-    "description": "The skeleton application for the Laravel framework.",
-    "keywords": [
-        "laravel",
-        "framework"
-    ],
+    "description": "A Laravel application pre-configured with MongoDB integration",
+    "keywords": ["laravel", "mongodb", "starter-kit"],
     "license": "MIT",
+    "homepage": "https://github.com/aasawariMongoDB/mongodb-starter-kit-for-laravel.git",
+    "authors": [
+        {
+            "name": "Aasawari Sahasrabuddhe",
+            "email": "aasawari.sahasrabuddhe@mongodb.com"
+        }
+    ],
     "require": {
         "php": "^8.2",
+        "ext-mongodb": "^1.21|^2",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "mongodb/laravel-mongodb": "^5.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
