Adding files for starter kit

--- a/.env.example
+++ b/.env.example
@@ -63,6 +63,11 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
-DB_CONNECTION=mongodb
-MONGODB_URI="<MongoDB Connection String>"
-MONGODB_DATABASE="test"
+
+###> mongodb/laravel-mongodb ###
+# DB_CONNECTION=mongodb
+# Format described at https://www.mongodb.com/docs/php-library/current/connect/connection-options/
+# MONGODB_URI="mongodb://username:password@localhost:27017/?authSource=auth-db"
+# MONGODB_URI="mongodb+srv://username:password@YOUR_CLUSTER_NAME.YOUR_HASH.mongodb.net/?retryWrites=true&w=majority"
+# MONGODB_DATABASE="test"
+
